<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.d2.pcu.MainActivity">

    <item android:id="@+id/templeFragment"
        android:icon="@drawable/ic_map"
        android:orderInCategory="100"
        android:title="@string/map"
        app:showAsAction="always"/>

    <item android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:orderInCategory="100"
        android:title="@string/calendar"
        app:showAsAction="always"/>

    <item android:id="@+id/newsFragment"
        android:icon="@drawable/ic_news"
        android:orderInCategory="100"
        android:title="@string/news"
        app:showAsAction="always"/>
    <item android:id="@+id/moreFragment"
        android:icon="@drawable/ic_more"
        android:orderInCategory="100"
        android:title="@string/more"
        app:showAsAction="always" />
</menu>
