<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/templeFragment">

    <fragment
        android:id="@+id/templeFragment"
        android:name="com.d2.pcu.fragments.map.TempleFragment"
        android:label="@string/map"
        tools:layout="@layout/temple_fragment" />
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.d2.pcu.fragments.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/calendar_fragment" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.d2.pcu.fragments.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/news_fragment" />
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.d2.pcu.fragments.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/more_fragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.d2.pcu.fragments.profile.ProfileFragment"
        android:label="profile_fragment"
        tools:layout="@layout/profile_fragment" />
</navigation>