<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="model"
            type="com.d2.pcu.fragments.cabinet.donate.DonateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.cabinet.CabinetFragment">

        <LinearLayout
            style="@style/AppToolbar"
            android:id="@+id/support_chats_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:onClick="@{model::onBackPressed}"
                android:padding="@dimen/default_margin"
                app:srcCompat="@drawable/ic_arrow_back_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/profile_donate"
                android:textAppearance="@style/AppText.Big.White.Bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivNotificationBell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/small"
                android:onClick="@{model::onNotificationClick}"
                android:padding="@dimen/small"
                android:visibility="@{model.shouldShowNotification ? View.VISIBLE : View.GONE}"
                app:srcCompat="@drawable/ic_notifications_none" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/support_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donates_title"
            android:textAppearance="@style/AppText.Big.Bold"
            app:layout_constraintBottom_toTopOf="@id/support_body_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/support_chats_toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/support_body_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/donates_body_text"
            android:textAppearance="@style/AppText"
            app:layout_constraintBottom_toTopOf="@id/llPayments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/support_title_tv" />

        <LinearLayout
            android:id="@+id/llPayments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/support_body_tv">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/donates_liqpay_btn"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:onClick="@{model::onDonateClick}"
                android:text="@string/donates_liqpay"

                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/donates_monobank_btn"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:onClick="@{model::onDonateClick}"
                android:visibility="gone"
                android:text="@string/donates_monobank"

                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/donates_privat24_btn"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_button"
                android:visibility="gone"
                android:onClick="@{model::onDonateClick}"
                android:text="@string/donates_privat24"

                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/donates_portmone_btn"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_button"
                android:visibility="gone"
                android:onClick="@{model::onDonateClick}"
                android:text="@string/donates_portmone"

                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/donate_paypal_btn"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_button"
                android:onClick="@{model::onDonateClick}"
                android:visibility="gone"
                android:text="@string/donates_paypal"

                android:textAllCaps="false" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>